src/blog.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-blog-CONFIG_APP_NAME
  namespace: CONFIG_NAMESPACE
spec:
  selector:
    app: ghost-blog-CONFIG_APP_NAME
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ghost-blog-CONFIG_APP_NAME
    namespace: CONFIG_NAMESPACE
    labels:
        app: ghost-blog
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ghost-blog-CONFIG_APP_NAME
    template:
        metadata:
            labels:
                app: ghost-blog-CONFIG_APP_NAME
        spec:
            containers:
            - name: ghost-blog-CONFIG_APP_NAME
              image: ghost:4
              imagePullPolicy: Always
              ports:
                - containerPort: 2368
              volumeMounts:
              - mountPath: /var/lib/ghost/content
                name: blog-content
            volumes:
            - name: blog-content
              persistentVolumeClaim:
                claimName: blog-content-CONFIG_APP_NAME
