src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress-CONFIG_APP_NAME
  namespace: CONFIG_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ###########################
  tls:
  - hosts:
    - CONFIG_DOMAIN
    secretName: tls-secret-CONFIG_APP_NAME
  ###########################  
  rules:
  - host: CONFIG_DOMAIN
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ghost-blog-CONFIG_APP_NAME
            port:
              number: 80
